# metadata-manager

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: publish.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260314_0001_create_items_table.py  20260314_0002_add_onboarding_config_tables.py  20260314_0003_add_name_to_folder_mappings.py  20260314_0004_add_unique_name_constraint_to_folder_mappings.py  20260314_0005_add_scan_tables.py  20260314_0006_split_scan_phases.py  20260314_0007_use_bigint_for_file_identity.py  20260314_0008_add_full_tags_json_to_media_file_scans.py  20260314_0009_add_file_format_to_quality_profiles.py  20260314_0010_add_unmanic_path_prefix_to_folder_mappings.py
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  health.py  items.py  onboarding.py  scan.py  settings.py
backend/app/core/: config.py  env_store.py
backend/app/db/: migrations.py
backend/app/models/: __init__.py  app_setting.py  folder_mapping.py  item.py  media_file_scan.py  metadata_tag_rule.py  quality_profile.py  scan_run.py
backend/app/services/: compliance.py  inventory_scheduler.py  path_mapping.py  scanner.py
backend/tests/: test_health.py  test_settings.py
docker/: Dockerfile  entrypoint.sh  run-backend.sh  supervisord.conf
frontend/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: main.tsx  vite-env.d.ts
frontend/src/components/: App.tsx  types.ts
frontend/src/lib/: api.ts  (+1 more)
(+19 files in other folders)
